always trust the error message

--- a/TB_or_not_TB.ipynb
+++ b/TB_or_not_TB.ipynb
@@ -12,11 +12,29 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2499ba65",
+   "id": "3be6b3bf",
    "metadata": {},
    "outputs": [],
    "source": [
     "! pip freeze > requirements_1.txt "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b5c6dc5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.7.10\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! python --version"
    ]
   },
   {
